# rusty-clipboard

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  dev.ps1  install.ps1
.cursor/plans/: rust-37ce4031.plan.md
.github/workflows/: ci.yml  release.yml
clipctl/: Cargo.toml
clipctl/src/: app.rs  ipc.rs  main.rs  paste.rs  syntax.rs  theme.rs  ui.rs
clipd/: Cargo.toml
clipd/src/: clipboard.rs  config.rs  db.rs  ipc.rs  main.rs  model.rs  service.rs
config/: config.example.toml
docs/: Architecture.md  Design.md  Quick_FAQs.md  Usage.md
