[package]
name = "clipctl"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow.workspace = true
bytes.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

ratatui = "0.26"
crossterm = "0.28"
fuzzy-matcher = "0.3"
once_cell = "1"
nu-ansi-term = "0.50"

